# GradWork

./: CMakeLists.txt  Dockerfile  docker_help.txt  help.txt  requirements.txt  setup.py  start.py  worker.config
cmake/: CMakeLists.txt
engine/: CMakeLists.txt  engine_module.cpp  run_all_py_tests.py
engine/Common/: CMakeLists.txt
engine/Common/include/: BFPointSearcher.h  BoundingBox.h  DefinesAndConstants.h  IObject.h  Intersection.h  KDNode.h  KDTree.h  ParallelUtils.h  PointNeighborSearcher.h  Ray.h  Simulation.h  ThreadPool.h
engine/Common/include/impl/: ParallelUtils_impl.h  ThreadPool_impl.h
engine/Common/py/: BoundingBox_py.hpp  IObject_py.hpp  Intersection_py.hpp  boundingbox_py.hpp  common_py.hpp
engine/Common/src/: BFPointSearcher.cpp  BoundingBox.cpp  Intersection.cpp  KDNode.cpp  KDTree.cpp  ParallelUtils.cpp  Ray.cpp  Simulation.cpp
engine/Common/test/c++/: ParallelUtils_test.cpp  test_main.cpp
engine/Common/test/python/: BoundingBox_test.py  Intersection_test.py  Ray_test.py
engine/Fluid/: CMakeLists.txt
engine/Fluid/include/: Fluid.h  FluidConstants.h  Particle.h  ParticleSystem.h  SPHSimulation.h  SPHSystem.h
engine/Fluid/py/: Fluid_py.hpp
engine/Fluid/src/: Fluid.cpp  Particle.cpp  SPHSimulation.cpp  SPHSpikyKernel.cpp  SPHSystem.cpp  StandartParticle.cpp  main.cpp
engine/Fluid/test/python/: Fluid_test.py
engine/GLUTWindow/: CMakeLists.txt
engine/GLUTWindow/include/: GLUTWindow.h
engine/GLUTWindow/src/: GLUTWindow.cpp
engine/Math/: CMakeLists.txt
engine/Math/include/: DefinesAndConstants.h  Vector.h
engine/Math/include/impl/: Vector3dImpl.h  VectorImpl.h
engine/Math/py/: Vector_py.hpp  math_py.hpp
engine/Math/src/: SolveEquations.cpp
engine/Math/test/python/: Vector_test.py
engine/Primitives/: CMakeLists.txt
engine/Primitives/include/: IObject.h  ISurface.h  Intersection.h  Ray.h  Sphere.h
engine/Primitives/py/: IObject_py.hpp  ISurface_py.hpp  Intersection_py.hpp  Ray_py.hpp  Sphere_py.hpp  primitives_py.hpp
engine/Primitives/src/: Intersection.cpp  Sphere.cpp
engine/Primitives/test/python/: Ray_test.py  Sphere_test.py
engine/Scene/: CMakeLists.txt
engine/Scene/include/: Scene.h
engine/Scene/py/: Scene_py.hpp
engine/Scene/src/: Scene.cpp
engine/Scene/test/python/: Scene_performance_test.py  Scene_test.py
engine/Visual/: CMakeLists.txt
engine/Visual/include/: Camera.h  Color.h  ColorMaterial.h  ILight.h  IMaterial.h  Image.h  KDNode.h  KDTree.h  SpotLight.h
engine/Visual/py/: Camera_py.hpp  ColorMaterial_py.hpp  Color_py.hpp  ILight_py.hpp  IMaterial_py.hpp  Image_py.hpp  SpotLight_py.hpp  visual_py.hpp
engine/Visual/src/: Color.cpp  ColorMaterial.cpp  Image.cpp  RenderableObject.cpp  SpotLight.cpp
engine/Visual/test/python/: Camera_test.py  ColorMaterial_test.py  Color_test.py  Image_test.py  SpotLight_test.py
parcs/: __init__.py
parcs/parcs_py/: parcs.py  scheduler.py
parcs/parcs_py/static/css/: style.css
parcs/parcs_py/static/js/: simulation.js
parcs/parcs_py/templates/: simulation.html  template.html
parcsv2/: node.py  parcs.py
parcsv2/Scenes/: simple_example.json
parcsv2/static/js/: camera.js  simulation.js
parcsv2/templates/: index.html  simulation.html  template.html
